--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
                     id="nav-logo"
                     alt="Team 1165 Logo"
                 />
-                <li class="nav-button" id="home-dropdown">
-                    <a href="/index.html">Home</a>
-                    <nav class="dropdown-content" id="home-dropdown-content">
-                        <a class="first-dropdown" href="/index.html"
-                            >Projects</a
-                        >
+                <li class="nav-button" id="menu-dropdown" tabindex="0">
+                    <span>Home</span>
+                    <nav class="dropdown-content" id="menu-dropdown-content">
+                        <a href="/index.html">Projects</a>
                         <a href="/index.html">Leaders</a>
                     </nav>
                 </li>
-                <li class="nav-button">
-                    <a href="/Pages/calendar.html">Calendar</a>
+                <li class="nav-button" id="menu-dropdown" tabindex="0">
+                    <span>Calendar</span>
+                    <nav class="dropdown-content" id="menu-dropdown-content">
+                        <a href="/Pages/calendar.html">View Calendar</a>
+                    </nav>
                 </li>
-                <li class="nav-button">
+                <li class="nav-button" tabindex="0">
                     <a href="/Pages/Sponsors.html">Sponsors</a>
                 </li>
-                <li class="nav-button"><a href="/Pages/Shop.html">Shop</a></li>
-                <li class="nav-button" id="donate-dropdown">
+                <li class="nav-button" tabindex="0">
+                    <a href="/Pages/Shop.html">Shop</a>
+                </li>
+                <li class="nav-button" id="menu-dropdown" tabindex="0">
                     <a href="/Pages/Donate.html">Donate</a>
-                    <nav class="dropdown-content" id="donate-dropdown-content">
+                    <nav class="dropdown-content" id="menu-dropdown-content">
                         <a class="first-dropdown" href="/index.html"
                             >General Donation</a
                         >
