Create .editorconfig and apply uniform code style

--- a/Pages/Sponsors.html
+++ b/Pages/Sponsors.html
@@ -1,219 +1,244 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/Resources/Favicons/favicon.png"
-    />
-  </head>
-  <body>
-    <!--Navigation Bar-->
-    <nav class="fill" id="nav-bar">
-      <ul>
-        <img
-          src="/Resources/Black Logo-1.png"
-          id="nav-logo"
-          alt="Team 1165 Logo"
+    <head>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/Resources/Favicons/favicon.png"
         />
-        <li class="nav-button" id="home-dropdown">
-          <a href="/index.html">Home</a>
-          <nav class="dropdown-content" id="home-dropdown-content">
-            <a class="first-dropdown" href="/index.html">Projects</a>
-            <a href="/index.html">Leaders</a>
-          </nav>
-        </li>
-        <li class="nav-button">
-          <a href="/Pages/calendar.html">Calendar</a>
-        </li>
-        <li class="nav-button">
-          <a href="/Pages/sponsors.html">Sponsors</a>
-        </li>
-        <li class="nav-button"><a href="/Pages/Shop.html">Shop</a></li>
-        <li class="nav-button" id="donate-dropdown">
-          <a href="/Pages/Donate.html">Donate</a>
-          <nav class="dropdown-content" id="donate-dropdown-content">
-            <a class="first-dropdown" href="/Pages/Gen Donate.html"
-              >General Donation</a
+    </head>
+    <body>
+        <!--Navigation Bar-->
+        <nav class="fill" id="nav-bar">
+            <ul>
+                <img
+                    src="/Resources/Black Logo-1.png"
+                    id="nav-logo"
+                    alt="Team 1165 Logo"
+                />
+                <li class="nav-button" id="home-dropdown">
+                    <a href="/index.html">Home</a>
+                    <nav class="dropdown-content" id="home-dropdown-content">
+                        <a class="first-dropdown" href="/index.html"
+                            >Projects</a
+                        >
+                        <a href="/index.html">Leaders</a>
+                    </nav>
+                </li>
+                <li class="nav-button">
+                    <a href="/Pages/calendar.html">Calendar</a>
+                </li>
+                <li class="nav-button">
+                    <a href="/Pages/sponsors.html">Sponsors</a>
+                </li>
+                <li class="nav-button"><a href="/Pages/Shop.html">Shop</a></li>
+                <li class="nav-button" id="donate-dropdown">
+                    <a href="/Pages/Donate.html">Donate</a>
+                    <nav class="dropdown-content" id="donate-dropdown-content">
+                        <a class="first-dropdown" href="/Pages/Gen Donate.html"
+                            >General Donation</a
+                        >
+                        <a href="/Pages/Tax credit Dono.html">Tax Credit</a>
+                    </nav>
+                </li>
+
+                <li class="nav-button" id="Accomplishments-dropdown">
+                    <a href="/index.html">Accomplishments</a>
+                    <nav
+                        class="dropdown-content"
+                        id="Accomplishments-dropdown-content"
+                    >
+                        <a class="first-dropdown" href="/Pages/Projects.html"
+                            >Projects</a
+                        >
+                        <a href="/Pages/Awards.html">Awards</a>
+                    </nav>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Body -->
+        <div class="Title-Container">
+            <h1 class="page-title" style="width: 100%; text-align: center">
+                Sponsor Us
+            </h1>
+            <img
+                src="/Resources/Icons/handshake-icon.png"
+                id="TeamIcon"
+                alt="Team Icon"
+            />
+        </div>
+
+        <!-- Sponsorship Packet -->
+        <div class="divider">
+            <hr />
+            <h1
+                style="
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                "
             >
-            <a href="/Pages/Tax credit Dono.html">Tax Credit</a>
-          </nav>
-        </li>
-
-        <li class="nav-button" id="Accomplishments-dropdown">
-          <a href="/index.html">Accomplishments</a>
-          <nav class="dropdown-content" id="Accomplishments-dropdown-content">
-            <a class="first-dropdown" href="/Pages/Projects.html">Projects</a>
-            <a href="/Pages/Awards.html">Awards</a>
-          </nav>
-        </li>
-      </ul>
-    </nav>
-
-    <!-- Body -->
-    <div class="Title-Container">
-      <h1 class="page-title" style="width: 100%; text-align: center">
-        Sponsor Us
-      </h1>
-      <img
-        src="/Resources/Icons/handshake-icon.png"
-        id="TeamIcon"
-        alt="Team Icon"
-      />
-    </div>
-
-    <!-- Sponsorship Packet -->
-    <div class="divider">
-      <hr />
-      <h1
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-        "
-      >
-        Sponsorship Packet
-      </h1>
-      <hr />
-    </div>
-    <div id="sponsorship-packet">
-      <p>View our Sponsorship Packet</p>
-      <iframe
-        src="https://drive.google.com/file/d/1wOAIZDS4SVDNGWNok7cfo6i1EDZdo6yL/preview"
-        style="border-width: 0"
-        width="500"
-        height="400"
-        frameborder="0"
-        scrolling="no"
-      ></iframe>
-    </div>
-
-    <!-- Sponsorship Tiers -->
-    <div class="divider">
-      <hr />
-      <h1
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-        "
-      >
-        Sponsorship Tiers
-      </h1>
-      <hr />
-    </div>
-    <div style="text-align: center; font-size: large">
-      <!-- Paradise Sponsor -->
-      <div>
-        <h2
-          class="sponsor-tier"
-          style="color: #500a0a; text-decoration: underline"
-        >
-          Paradise Sponsor
-        </h2>
-        <div class="sponsor-amount">$10,000+</div>
-
-        <div class="sponsor-detail">
-          •Separate Banner in our Pit with Company Name and Logo
+                Sponsorship Packet
+            </h1>
+            <hr />
         </div>
-        <div class="sponsor-detail">•Video Shoutout on our Social Media</div>
-        <div class="sponsor-detail">•Platinum Tier Benefits</div>
-      </div>
-      <br />
-      <div>
-        <!-- Platinum Sponsor -->
-        <h2
-          class="sponsor-tier"
-          style="color: #6d9eeb; text-decoration: underline"
-        >
-          Platinum Sponsor
-        </h2>
-        <div class="sponsor-amount">$5,000-$9,999</div>
+        <div id="sponsorship-packet">
+            <p>View our Sponsorship Packet</p>
+            <iframe
+                src="https://drive.google.com/file/d/1wOAIZDS4SVDNGWNok7cfo6i1EDZdo6yL/preview"
+                style="border-width: 0"
+                width="500"
+                height="400"
+                frameborder="0"
+                scrolling="no"
+            ></iframe>
+        </div>
 
-        <div class="sponsor-detail">
-          •Robot Demonstration at Company (pending Sponsor request and team
-          availability)
+        <!-- Sponsorship Tiers -->
+        <div class="divider">
+            <hr />
+            <h1
+                style="
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                "
+            >
+                Sponsorship Tiers
+            </h1>
+            <hr />
         </div>
-        <div class="sponsor-detail">•Name and Logo on Workbench</div>
-        <div class="sponsor-detail">•Name and Logo on Competition Robot</div>
-        <div class="sponsor-detail">
-          •Monthly Video Call with Students to talk about STEM
-        </div>
-        <div class="sponsor-detail">•Gold Tier Benefits</div>
-      </div>
-      <br />
-      <div>
-        <!-- Gold Sponsor -->
-        <h2
-          class="sponsor-tier"
-          style="color: #e0c635; text-decoration: underline"
-        >
-          Gold Sponsor
-        </h2>
-        <div class="sponsor-amount">$1,500-$4,999</div>
-        <div class="sponsor-detail">•Name and Logo Displayed in Pit</div>
-        <div class="sponsor-detail">•Name and Logo on Shirts</div>
-        <div class="sponsor-detail">
-          •Name listed on team registration papers
-        </div>
-        <div class="sponsor-detail">•Silver Tier Benefits</div>
-      </div>
-      <br />
-      <div>
-        <!-- Silver Sponsor -->
-        <h2
-          class="sponsor-tier"
-          style="color: #798180; text-decoration: underline"
-        >
-          Silver Sponsor
-        </h2>
-        <div class="sponsor-amount">$500-$1,499</div>
-        <div class="sponsor-detail">•Name and Logo on Monthly Newsletter</div>
-        <div class="sponsor-detail">•Name, Logo, and Link on Website</div>
-        <div class="sponsor-detail">•Name and Logo Displayed in Pit</div>
-        <div class="sponsor-detail">•Bronze Tier Benefits</div>
-      </div>
-      <br />
-      <div>
-        <!-- Bronze Sponsor -->
-        <h2
-          class="sponsor-tier"
-          style="color: #c55a11; text-decoration: underline"
-        >
-          Bronze Sponsor
-        </h2>
-        <div class="sponsor-amount"><$499</div>
-        <div class="sponsor-detail">•Social Media Shout Out</div>
-        <div class="sponsor-detail">•Recieve Our Monthly Newsletter</div>
-      </div>
-      <br />
-    </div>
+        <div style="text-align: center; font-size: large">
+            <!-- Paradise Sponsor -->
+            <div>
+                <h2
+                    class="sponsor-tier"
+                    style="color: #500a0a; text-decoration: underline"
+                >
+                    Paradise Sponsor
+                </h2>
+                <div class="sponsor-amount">$10,000+</div>
 
-    <!-- Footer -->
-    <section class="footer">
-      <div class="social-icons">
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/Team1165" target="_blank"
-              ><img src="/Resources/Facebook.png" alt="Facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="mailto:team1165@gmail.com" target="_blank"
-              ><img src="/Resources/Gmail Logo.png" alt="Gmail"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/teamparadise.1165"
-              target="_blank"
-              ><img src="/Resources/Instagram.png" alt="Instagram"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </body>
+                <div class="sponsor-detail">
+                    •Separate Banner in our Pit with Company Name and Logo
+                </div>
+                <div class="sponsor-detail">
+                    •Video Shoutout on our Social Media
+                </div>
+                <div class="sponsor-detail">•Platinum Tier Benefits</div>
+            </div>
+            <br />
+            <div>
+                <!-- Platinum Sponsor -->
+                <h2
+                    class="sponsor-tier"
+                    style="color: #6d9eeb; text-decoration: underline"
+                >
+                    Platinum Sponsor
+                </h2>
+                <div class="sponsor-amount">$5,000-$9,999</div>
+
+                <div class="sponsor-detail">
+                    •Robot Demonstration at Company (pending Sponsor request and
+                    team availability)
+                </div>
+                <div class="sponsor-detail">•Name and Logo on Workbench</div>
+                <div class="sponsor-detail">
+                    •Name and Logo on Competition Robot
+                </div>
+                <div class="sponsor-detail">
+                    •Monthly Video Call with Students to talk about STEM
+                </div>
+                <div class="sponsor-detail">•Gold Tier Benefits</div>
+            </div>
+            <br />
+            <div>
+                <!-- Gold Sponsor -->
+                <h2
+                    class="sponsor-tier"
+                    style="color: #e0c635; text-decoration: underline"
+                >
+                    Gold Sponsor
+                </h2>
+                <div class="sponsor-amount">$1,500-$4,999</div>
+                <div class="sponsor-detail">
+                    •Name and Logo Displayed in Pit
+                </div>
+                <div class="sponsor-detail">•Name and Logo on Shirts</div>
+                <div class="sponsor-detail">
+                    •Name listed on team registration papers
+                </div>
+                <div class="sponsor-detail">•Silver Tier Benefits</div>
+            </div>
+            <br />
+            <div>
+                <!-- Silver Sponsor -->
+                <h2
+                    class="sponsor-tier"
+                    style="color: #798180; text-decoration: underline"
+                >
+                    Silver Sponsor
+                </h2>
+                <div class="sponsor-amount">$500-$1,499</div>
+                <div class="sponsor-detail">
+                    •Name and Logo on Monthly Newsletter
+                </div>
+                <div class="sponsor-detail">
+                    •Name, Logo, and Link on Website
+                </div>
+                <div class="sponsor-detail">
+                    •Name and Logo Displayed in Pit
+                </div>
+                <div class="sponsor-detail">•Bronze Tier Benefits</div>
+            </div>
+            <br />
+            <div>
+                <!-- Bronze Sponsor -->
+                <h2
+                    class="sponsor-tier"
+                    style="color: #c55a11; text-decoration: underline"
+                >
+                    Bronze Sponsor
+                </h2>
+                <div class="sponsor-amount"><$499</div>
+                <div class="sponsor-detail">•Social Media Shout Out</div>
+                <div class="sponsor-detail">
+                    •Recieve Our Monthly Newsletter
+                </div>
+            </div>
+            <br />
+        </div>
+
+        <!-- Footer -->
+        <section class="footer">
+            <div class="social-icons">
+                <ul>
+                    <li>
+                        <a
+                            href="https://www.facebook.com/Team1165"
+                            target="_blank"
+                            ><img src="/Resources/Facebook.png" alt="Facebook"
+                        /></a>
+                    </li>
+                    <li>
+                        <a href="mailto:team1165@gmail.com" target="_blank"
+                            ><img src="/Resources/Gmail Logo.png" alt="Gmail"
+                        /></a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.instagram.com/teamparadise.1165"
+                            target="_blank"
+                            ><img
+                                src="/Resources/Instagram.png"
+                                alt="Instagram"
+                        /></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </body>
 </html>
