--- a/Pages/shopconstruction.html
+++ b/Pages/shopconstruction.html
@@ -1,87 +1,48 @@
 <html>
-  <head>
-    <script src="https://js.stripe.com/v3/"></script>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/Resources/Favicons/favicon.png"
-    />
-  </head>
-  <body>
-    <!--Navigation Bar-->
-    <nav class="fill" id="nav-bar">
-      <ul>
-        <img
-          src="/Resources/Black Logo-1.png"
-          id="nav-logo"
-          alt="Team 1165 Logo"
+    <head>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/Resources/Favicons/favicon.png"
         />
-        <li class="nav-button" id="home-dropdown">
-          <a href="/index.html">Home</a>
-          <nav class="dropdown-content" id="home-dropdown-content">
-            <a class="first-dropdown" href="/index.html">Projects</a>
-            <a href="/index.html">Leaders</a>
-          </nav>
-        </li>
-        <li class="nav-button">
-          <a href="/Pages/calendar.html">Calendar</a>
-        </li>
-        <li class="nav-button">
-          <a href="/Pages/sponsors.html">Sponsors</a>
-        </li>
-        <li class="nav-button"><a href="/Pages/Shop.html">Shop</a></li>
-        <li class="nav-button" id="donate-dropdown">
-          <a href="/Pages/Donate.html">Donate</a>
-          <nav class="dropdown-content" id="donate-dropdown-content">
-            <a class="first-dropdown" href="/Pages/Gen Donate.html"
-              >General Donation</a
-            >
-            <a href="/Pages/Tax credit Dono.html">Tax Credit</a>
-          </nav>
-        </li>
+        <link rel="stylesheet" href="/Pages/style.css" />
+        <script>
+            window.addEventListener("DOMContentLoaded", (event) => {
+                fetch("/Pages/navbar.html")
+                    .then((response) => response.text())
+                    .then((data) => {
+                        document.getElementById("navbar").innerHTML = data;
+                    });
+                fetch("/Pages/socials.html")
+                    .then((response) => response.text())
+                    .then((data) => {
+                        document.getElementById("socials").innerHTML = data;
+                    });
+            });
+        </script>
+    </head>
 
-        <li class="nav-button" id="Accomplishments-dropdown">
-          <a href="/index.html">Accomplishments</a>
-          <nav class="dropdown-content" id="Accomplishments-dropdown-content">
-            <a class="first-dropdown" href="/Pages/Projects.html">Projects</a>
-            <a href="/Pages/Awards.html">Awards</a>
-          </nav>
-        </li>
-      </ul>
-    </nav>
+    <body>
+        <!--Navigation Bar-->
+        <div id="navbar"></div>
 
-    <!-- Body -->
-    <div class="Title-Container">
-      <h1 class="page-title" style="width: 100%; text-align: center">Shop</h1>
-      <img src="/Resources/Icons/team-icon.png" id="TeamIcon" alt="Team Icon" />
-    </div>
+        <!-- Body -->
+        <div class="Title-Container">
+            <h1 class="page-title" style="width: 100%; text-align: center">
+                Shop
+            </h1>
+            <img
+                src="/Resources/Icons/team-icon.png"
+                id="TeamIcon"
+                alt="Team Icon"
+            />
+        </div>
 
-    <div class="UnderConstruction">This section is under construction...</div>
+        <div class="UnderConstruction">
+            This section is under construction...
+        </div>
 
-    <!-- Footer -->
-    <section class="footer">
-      <div class="social-icons">
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/Team1165" target="_blank"
-              ><img src="/Resources/Facebook.png" alt="Facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="mailto:team1165@gmail.com" target="_blank"
-              ><img src="/Resources/Gmail Logo.png" alt="Gmail"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/teamparadise.1165"
-              target="_blank"
-              ><img src="/Resources/Instagram.png" alt="Instagram"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </body>
+        <!-- Footer -->
+        <div id="socials"></div>
+    </body>
 </html>
