my midnight thought

--- a/Pages/showcase.html
+++ b/Pages/showcase.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <link
             rel="icon"
@@ -22,29 +23,15 @@
                     });
             });
         </script>
+        <meta charset="UTF-8" />
+        <title>Showcase Page</title>
     </head>
-
     <body>
-        <!--Navigation Bar-->
-        <div id="navbar"></div>
+        <h1>Shuffled Photos and Videos</h1>
+        <div id="mediaContainer"></div>
 
-        <!-- Body -->
-        <div class="Title-Container">
-            <h1 class="page-title" style="width: 100%; text-align: center">
-                Tax Credit
-            </h1>
-            <img
-                src="/Resources/Icons/team-icon.png"
-                id="TeamIcon"
-                alt="Team Icon"
-            />
-        </div>
-
-        <div class="UnderConstruction">
-            This section is under construction...
-        </div>
-
-        <!-- Footer -->
-        <div id="socials"></div>
+        <script src="/Pages/showcase.js"></script>
     </body>
+    <!-- Footer -->
+    <div id="socials"></div>
 </html>
