--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -6,7 +6,7 @@
             href="/Resources/Favicons/favicon.png"
         />
         <link rel="stylesheet" href="/Pages/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <script>
             window.addEventListener("DOMContentLoaded", (event) => {
