--- a/Pages/socials.html
+++ b/Pages/socials.html
@@ -1,8 +1,11 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+/>
 
 <body>
     <section class="footer">
-            <div class="social-icons">
+        <div class="social-icons">
             <a href="/Pages/newsletter_form.html" class="icon newsletter"
                 ><i class="fa fa-envelope"></i> Newsletter</a
             >
