adding on to my midnight thought

--- a/Pages/showcase.html
+++ b/Pages/showcase.html
@@ -23,15 +23,20 @@
                     });
             });
         </script>
-        <meta charset="UTF-8" />
         <title>Showcase Page</title>
     </head>
     <body>
+        <!--Navigation Bar-->
+        <div id="navbar"></div>
+        <h1></h1>
         <h1>Shuffled Photos and Videos</h1>
         <div id="mediaContainer"></div>
 
         <script src="/Pages/showcase.js"></script>
     </body>
+    <h1></h1>
+    <h1></h1>
+
     <!-- Footer -->
     <div id="socials"></div>
 </html>
