--- a/Pages/upload.html
+++ b/Pages/upload.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="/Resources/Favicons/favicon.png"
-        />
-        <link rel="stylesheet" href="/Pages/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en"></html>
+<head>
+    <link
+        rel="icon"
+        type="image/x-icon"
+        href="/Resources/Favicons/favicon.png"
+    />
+    <link rel="stylesheet" href="/Pages/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <script>
-            window.addEventListener("DOMContentLoaded", (event) => {
-                fetch("/Pages/navbar.html")
-                    .then((response) => response.text())
-                    .then((data) => {
-                        document.getElementById("navbar").innerHTML = data;
-                    });
-                fetch("/Pages/socials.html")
-                    .then((response) => response.text())
-                    .then((data) => {
-                        document.getElementById("socials").innerHTML = data;
-                    });
-            });
-        </script>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Upload Page</title>
-    </head>
-    <body>
-        <h1>Upload Photos and Videos</h1>
-        <form id="uploadForm" enctype="multipart/form-data">
-            <input type="file" name="file" id="fileInput" multiple />
-            <button type="submit">Upload</button>
-        </form>
+    <script>
+        window.addEventListener("DOMContentLoaded", (event) => {
+            fetch("/Pages/navbar.html")
+                .then((response) => response.text())
+                .then((data) => {
+                    document.getElementById("navbar").innerHTML = data;
+                });
+            fetch("/Pages/socials.html")
+                .then((response) => response.text())
+                .then((data) => {
+                    document.getElementById("socials").innerHTML = data;
+                });
+        });
+    </script>
+</head>
+<body>
+    <!--Navigation Bar-->
+    <div id="navbar"></div>
+    <h1></h1>
+    <h1></h1>
+    <h1>Upload Photos and Videos</h1>
+    <form id="uploadForm" enctype="multipart/form-data">
+        <input type="file" name="file" id="fileInput" multiple />
+        <button type="submit">Upload</button>
+    </form>
 
-        <script src="/Pages/upload.js"></script>
-    </body>
-</html>
+    <script src="/Pages/upload.js"></script>
+    <!-- Footer -->
+    <div id="socials"></div>
+</body>
