Improve mobile website layout
Signed-off-by: UHDbits <uhdbits@duck.com>

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                                 Our team's annual goal is to assemble a team of
                                 energetic students that bring academic lessons
                                 to bear in a robotics competition. We are part
-                                of the FIRST organization (For Inspiration and
-                                Recognition of Science and Technolgy) and
-                                participate in FIRST Robotics Competitions
+                                of the <i>FIRST</i> organization (For Inspiration and
+                                Recognition of Science and Technology) and
+                                participate in <i>FIRST</i> Robotics Competitions
                                 (FRC).
                                 <br />
                                 <br />
@@ -89,9 +89,9 @@
                             <p id="projects">
                                 For the 2024 FRC CRESCENDO Season, Team Paradise
                                 built "The Rhino".<br /><br />
-                                Hueneme Port (California)<br />
+                                Hueneme Port (California)<br /><br />
                                 AZ Valley - Gracious Professionalism Award
-                                Winner, Alliance Captain<br />
+                                Winner, Alliance Captain<br /><br/>
                                 AZ East - Gracious Professionalism Award Winner,
                                 1st pick of 6th Seed Alliance.<br />
                             </p>
@@ -219,7 +219,7 @@
                                 </li>
                                 <li>
                                     <div>Mason Cucci</div>
-                                    <span> Captian of Safety </span>
+                                    <span> Captain of Safety </span>
                                 </li>
                                 <li>
                                     <div>Kaylynn Decker</div>
