--- a/Pages/showcase.html
+++ b/Pages/showcase.html
@@ -30,7 +30,7 @@
         <div id="navbar"></div>
         <h1></h1>
         <h1>Shuffled Photos and Videos</h1>
-        <div id="mediaContainer"></div>
+        <div id="photoGallery"></div>
 
         <script src="/Pages/showcase.js"></script>
     </body>
