--- a/Pages/upload.html
+++ b/Pages/upload.html
@@ -30,7 +30,7 @@
     <div class="container">
         <h2>Image Uploader</h2>
         <p>Here you can upload pictures of the team. Thank you for your suppourt</p>
-        <form action="/uploaded.html" method="post" enctype="multipart/form-data">
+        <form action=" " method="post" enctype="multipart/form-data">
             <label for="file-upload" class="upload-btn">Choose Image</label>
             <input type="file" id="file-upload" name="file" accept="image/*">
             <br>
@@ -54,6 +54,10 @@
             }
             reader.readAsDataURL(file);
         });
+        function UploadFile(inImg){
+            /*Onedrive nonsense*/
+            return true;
+        }
     </script>
     <div id="socials"></div>
 </body>
