--- a/Pages/upload.html
+++ b/Pages/upload.html
@@ -43,7 +43,10 @@
         </div>
     </div>
     <script>
-        //This is the upload function
+        // Replace with your OneDrive API credentials
+        const clientId = 'YOUR_CLIENT_ID';
+        const redirectUri = 'YOUR_REDIRECT_URI';
+        const scopes = 'Files.ReadWrite.All';
         var f;
         document.getElementById('file-upload').addEventListener('change', function(event) {
             const fileInput = event.target;
@@ -56,9 +59,46 @@
             }
             reader.readAsDataURL(file);
         });
-        function UploadFile(inImg){
-            /*Onedrive nonsense*/
-            return true;
+
+        function getToken() {
+            return new Promise((resolve, reject) => {
+                const url = `https://login.microsoftonline.com/common/oauth2/v2.0/token`;
+
+                // Make a POST request to get an access token
+                axios.post(url, {
+                    client_id: clientId,
+                    redirect_uri: redirectUri,
+                    scope: scopes,
+                    grant_type: 'client_credentials'
+                })
+                .then(response => {
+                    resolve(response.data.access_token);
+                })
+                .catch(error => {
+                    reject(error);
+                });
+            });
+        }
+
+        function uploadToOneDrive(accessToken) {
+            const url = 'https://graph.microsoft.com/v1.0/me/drive/root:/path/to/upload/' + f.name + ':/content';
+
+            // Prepare the request headers
+            const headers = {
+                'Authorization': `Bearer ${accessToken}`,
+                'Content-Type': f.type
+            };
+
+            // Make a PUT request to upload the file
+            axios.put(url, f, { headers: headers })
+                .then(response => {
+                    console.log('File uploaded successfully:', response.data);
+                    alert('File uploaded successfully!');
+                })
+                .catch(error => {
+                    console.error('Error uploading file:', error.response.data.error);
+                    alert('Error uploading file. See console for details.');
+                });
         }
     </script>
     <div id="socials"></div>
